--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 Flask==2.0.1
 flask_codemirror==1.3
 Flask_Login==0.5.0
+Flask_SocketIO==5.1.1
 Flask_WTF==1.0.1
 gevent==21.1.2
 memory_profiler==0.60.0
 psutil==5.9.1
 python_magic==0.4.27
-requests==2.27.1
+requests==2.28.1
 termcolor==1.1.0
