--- a/extensions/bash/appinfo.json
+++ b/extensions/bash/appinfo.json
@@ -1,7 +1,7 @@
 {
   "type": "application",
   "name": "bash",
-  "status_required": ["admin"],
+  "status_required": ["admin", "programmer"],
   "ico": "app.svg",
   "html": "app.html",
   "css": ["app.css"],
