--- a/extensions/git/appinfo.json
+++ b/extensions/git/appinfo.json
@@ -7,5 +7,6 @@
   "css": ["app.css"],
   "script": ["app.js"],
   "executable": "app.py",
-  "create_layout": []
+  "create_layout": [],
+  "config": {}
 }
