начал делать кэширование

--- a/extensions/openai/appinfo.json
+++ b/extensions/openai/appinfo.json
@@ -2,6 +2,7 @@
   "type": "application",
   "name": "openai",
   "status_required": [],
+  "cached": true,
   "ico": "app.svg",
   "html": "app.html",
   "css": ["app.css"],
