--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ Flask_Login==0.5.0
 Flask_SocketIO==5.1.1
 Flask_WTF==1.0.1
 gevent==21.1.2
+Markdown==3.4.3
 memory_profiler==0.60.0
 psutil==5.9.1
 python_magic==0.4.27
-requests==2.28.1
+rarfile==4.0
+Requests==2.30.0
 termcolor==1.1.0
+waitress==2.1.2
