--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask_WTF==1.0.1
 gevent==21.1.2
 Markdown==3.4.3
 memory_profiler==0.60.0
+Pillow==9.5.0
 psutil==5.9.1
 python_magic==0.4.27
 rarfile==4.0
